objects/SLR_Holding__c.object
<CustomObject>
    <description>Holding object to represent fund flows for STANLIB&apos;s Retail Distribution workstream</description>
    <fields>
        <fullName>Recent_Holdings__c</fullName>
        <formula>IF( SLC_EffectiveDate__c =  $Setup.MaxDate__c.Max_Date__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Holdings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLC_BdmTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to related Holding records with Target records that are assigned to individual BDMs</description>
        <label>BDM Target</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>SLC_Target__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>BDM Target</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SLC_Target__c</referenceTo>
        <relationshipLabel>Holdings</relationshipLabel>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_EffectiveDate__c</fullName>
        <description>Effective date of the AUM and Net flows</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_FundClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STANLIB Unit Trust fund class identifier (JSE Code)</description>
        <label>Fund Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>STANLIB Share Class</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Holdings (Fund Class)</relationshipLabel>
        <relationshipName>HoldingsFundClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STANLIB Unit Trust fund name</description>
        <label>Fund</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>STANLIB Fund</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Holdings</relationshipLabel>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLR_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial broker</description>
        <label>Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Stanlib Retail Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holdings</relationshipLabel>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLR_AumNative__c</fullName>
        <description>Assets under management in native currency of the fund</description>
        <label>AuM Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_AumZar__c</fullName>
        <description>Assets under management in South African Rands</description>
        <label>AuM ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_BdmTargetMatches__c</fullName>
        <description>Holding Bdm Target Matches</description>
        <formula>IF(SLC_BdmTarget__r.OwnerId = SLR_Agent__r.OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Target Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLR_Brokerage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Place where Financial Broker Works</description>
        <label>Brokerage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Stanlib Company Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Holdings (Brokerage)</relationshipLabel>
        <relationshipName>HoldingsBrokerage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLR_Comment__c</fullName>
        <description>Gives user the ability to comment on a Holding record.</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLR_Currency__c</fullName>
        <description>Native currency of Holding record</description>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used as the unique identifier from STANLIB&apos;s external data warehouse</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLR_Franchise__c</fullName>
        <description>Calculates Franchise from Fund&gt;Strategy value for Retail Portal reports</description>
        <formula>SLC_Fund__r.SLC_Strategy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Franchise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_Frequency__c</fullName>
        <description>Frequency of the data update (e.g. monthly)</description>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_InflowBase__c</fullName>
        <description>Inflow on Holding at month end.</description>
        <label>Inflow Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowBase__c</fullName>
        <description>Inflow minus Outflow for the Effective Period</description>
        <label>Netflow Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsExclReinvestmentsNative__c</fullName>
        <description>Client inflows less client outflows excluding reinvestments in native currency of the fund</description>
        <label>Netflows excl. Reinvestments Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsExclReinvestments__c</fullName>
        <description>Client inflows less client outflows excluding reinvestmentsin South African Rands</description>
        <label>Netflows Excl. Reinvestments ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsInclReinvestmentsNative__c</fullName>
        <description>Client inflows less client outflows including reinvestments in native currency of the fund</description>
        <label>Netflows incl. Reinvestments Native</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_NetflowsinclReinvestments__c</fullName>
        <description>Client inflows less client outflows including reinvestments in South African Rands</description>
        <label>Netflows incl. Reinvestments ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLR_OutflowBase__c</fullName>
        <description>Outlfow on Holding at month end.</description>
        <label>Outflow Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_Platform__c</fullName>
        <description>Name of the Linked Investment Service Provider</description>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_Revenue__c</fullName>
        <description>Revenue excluding Value Added Tax</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLR_SourceSystem__c</fullName>
        <description>STANLIB Retail Data Integration. Indicates where which system the Holding record information was sourced from.</description>
        <label>Source System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLR_StrategyTargetMatches__c</fullName>
        <formula>IF ( SLR_StrategyTarget__r.SLR_Strategy__c=  SLC_Fund__r.SLC_Strategy__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Target Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLR_StrategyTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to related Holding record with Strategy Target records.</description>
        <label>Strategy Target</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SLC_Target__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Strategy Target</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SLC_Target__c</referenceTo>
        <relationshipLabel>Holdings (Strategy Target)</relationshipLabel>
        <relationshipName>StrategyHoldings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Holding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SLR_Agent__c</columns>
        <columns>SLR_Brokerage__c</columns>
        <columns>SLC_Fund__c</columns>
        <columns>SLC_FundClass__c</columns>
        <columns>SLC_EffectiveDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Retail_Client_List_View</fullName>
        <columns>NAME</columns>
        <columns>SLR_Agent__c</columns>
        <columns>SLR_AumZar__c</columns>
        <columns>SLR_InflowBase__c</columns>
        <columns>SLR_OutflowBase__c</columns>
        <columns>SLR_NetflowBase__c</columns>
        <filterScope>Mine</filterScope>
        <label>Retail Client List View</label>
    </listViews>
    <listViews>
        <fullName>SLR_My_Holdings</fullName>
        <columns>NAME</columns>
        <columns>SLC_EffectiveDate__c</columns>
        <columns>SLR_InflowBase__c</columns>
        <columns>SLR_OutflowBase__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Holdings</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Holding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holdings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>